# smoothmirror

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
build-mac/: ffmpeg.rb
capture/: Cargo.toml
capture/src/: audio_encode.rs  audio_linux.rs  audio_windows.rs  capture_linux.rs  capture_wayland.rs  capture_windows.rs  encode_ffmpeg.rs  encode_nvidia.rs  gamepad_linux.rs  gamepad_noop.rs  main.rs  udp.rs  ui.rs
common/: Cargo.toml
common/src/: chan.rs  lib.rs  msgs.rs  portforward.rs
display/: Cargo.toml
display/src/: client.rs  main.rs  priveleged.rs  simple.frag  simple.vert  ui.rs  usb.rs
repeat/: Cargo.toml
repeat/src/: main.rs
src/: capture.rs  client.rs  main.rs
