[package]
name = "prospectivegopher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cudarc = {version = "0.9.15"}
nvidia-video-codec-sdk = "0.3.1"
x11rb = {version = "0.13.1", features = ["shm"]}
tokio = {version = "1.0.0", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
wgpu = "0.17.0"
async-winit = "0.2.1"
ffmpeg-next = "7.0.2"
rmp-serde = "1.3.0"
serde_bytes = "0.11.14"
h264-reader = "0.7.0"
