[workspace]
members = ["capture", "common", "display", "repeat"]
resolver = "2"

# Make the default dev profile the same as release
[profile.dev]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
