[package]
name = "capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cudarc = {version = "0.9.15"}
nvidia-video-codec-sdk = "0.3.1"
x11rb = {version = "0.13.1", features = ["shm", "xfixes"]}
serde = {version = "1.0", features = ["derive"]}
rmp-serde = "1.3.0"
serde_bytes = "0.11.14"
pulse = { version = "2.28.1", package = "libpulse-binding" }
audiopus = "0.3.0-rc.0"
enigo = "0.2.1"
