[package]
name = "capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
serde_bytes = "0.11.14"
audiopus = "0.3.0-rc.0"
enigo = "0.2.1"
yuvutils-rs = "0.4.6"

# NVENC dependencies
cudarc = { version = "0.9.15", optional = true }
nvidia-video-codec-sdk = { version = "0.3.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13.1", features = ["shm", "xfixes"] }
pulse = { version = "2.28.1", package = "libpulse-binding" }
ffmpeg-sys-next = { version = "7.0.2", features = ["build"] }

[target.'cfg(target_os = "macos")'.dependencies]
ffmpeg-sys-next = { version = "7.0.2", features = ["build"] }

[target.'cfg(target_os = "windows")'.dependencies]
ffmpeg-sys-next = { version = "7.0.2", features = ["static"] }
windows-capture = "1.3.6"

[features]
default = []
nvenc = ["dep:cudarc", "dep:nvidia-video-codec-sdk"]
