[package]
name = "display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
ffmpeg-sys-next = {version = "7.0.2", features = ["build"]}
wgpu = "0.17.0"
serde = {version = "1.0", features = ["derive"]}
rmp-serde = "1.3.0"
serde_bytes = "0.11.14"
h264-reader = "0.7.0"
cpal = "0.15.3"
audiopus = "0.3.0-rc.0"
pollster = "0.3"
async-std = "1.12.0"
socket2 = "0.5.7"
