[package]
name = "display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.35.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
serde_bytes = "0.11.14"
cpal = "0.15.3"
audiopus = "0.3.0-rc.0"
pollster = "0.3"
async-std = "1.12.0"
socket2 = "0.5.7"
yuvutils-rs = "0.4.6"

[target.'cfg(target_os = "linux")'.dependencies]
ffmpeg-sys-next = { version = "7.0.2", features = [
    "build",
    "build-license-gpl",
    "build-lib-x264",
] }

[target.'cfg(target_os = "macos")'.dependencies]
ffmpeg-sys-next = { version = "7.0.2", default-features = false, features = [
    "avcodec",
    "avdevice",
    "avfilter",
    "avformat",
    "swresample",
    "swscale",
] }

[target.'cfg(target_os = "windows")'.dependencies]
ffmpeg-sys-next = { version = "7.0.2", features = ["static"] }
